solved the spacing in the questions number

--- a/src/app/pages/quiz-list/quiz-list.page.scss
+++ b/src/app/pages/quiz-list/quiz-list.page.scss
@@ -106,3 +106,26 @@
 :host ::ng-deep ion-label {
   color: #000 !important; /* Set label text color to black */
 }
+.card-label .card-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+
+  h2 {
+    margin: 0;
+    font-weight: bold;
+    font-size: 1.3rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  p {
+    margin: 0;
+    min-width: 90px; // espacio reservado para número y palabra
+    text-align: right;
+    font-size: 0.9rem;
+    color: WHITE;
+  }
+}
